tests/negative/Internal/NotATrait.juvix
module NotATrait;

type Maybe A :=
  | just A
  | nothing;

open Maybe;

f {A} {{Maybe A}} : Maybe A := nothing;
